...

  "annuler": "Annuler",
  "fermer": "Fermer",
  "supprimer": "Supprimer",
  "enregistrer": "Enregistrer",
  "champObligatoire": "Ce champ est obligatoire",
  "urlInvalide": "URL invalide (ex: http://...)",
  "creer": "Créer",
  "connexion": "Connexion",
  "effacer": "Effacer",
  "oui": "Oui",
  "non": "Non",

...
